--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-</head>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
+
+  </head>
 
 <body>
 
@@ -17,7 +22,6 @@
       <i class="fa fa-fw fa-address-book"></i>
       <span>My Contact List</span>
     </h1>
-    <!-- TODO show the new-contact-form when this button is clicked -->
     <button class="fab" onclick="toggleAddContactForm()" title="New Contact">
       <i class="fa fa-lg fa-plus-circle"></i>
     </button>
@@ -26,8 +30,9 @@
   </header>
 
   <main class="container">
+      <!-- TODO Add hidden class back after adding form submission -->
 
-    <form class="card mt-1 mb-1" id="new-contact-form" class="" onsubmit="addContact(event)">
+    <form class="card mt-1 mb-1 " id="new-contact-form" class="" onsubmit="addContact(event)">
       <div>
         <h4 class="mt-1 mb-1">
           <i class="fa fa-fw fa-user"></i>
@@ -38,40 +43,26 @@
         <label for="name">Name:</label>
         <input type="text" name="name">
       </div>
+      <div>
+        <label for="Phone">Phone:</label>
+        <input placeholder="123-456-7890 " type="tel" name="phone"  pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+      </div>
+      <div>
+        <label for="emergency-contact">emergency-contact:</label>
+        <input type="checkbox" name="emergencycontact">
+      </div>
 
       <hr>
       <div class="d-flex space-between">
         <button type="submit">Submit</button>
-        <!-- TODO hide this form when this button is clicked -->
+
         <button class="btn-cancel" type="button" onclick="toggleAddContactForm()">cancel</button>
       </div>
     </form>
 
-    <div class="contacts" id="contact-list">
-      <!-- TODO Remove these templates and draw them using JavaScript -->
-      <div class="card mt-1 mb-1">
-        <h3 class="mt-1 mb-1">Jimmy Tester</h3>
-        <div class="d-flex space-between">
-          <p>
-            <i class="fa fa-fw fa-phone"></i>
-            <span>(777) 777-7777</span>
-          </p>
-          <i class="action fa fa-trash text-danger"></i>
-        </div>
-      </div>
-      <div class="card mt-1 mb-1 emergency-contact">
-        <h3 class="mt-1 mb-1">Emergency Contact Tester</h3>
-        <div class="d-flex space-between">
-          <p>
-            <i class="fa fa-fw fa-phone"></i>
-            <span>(777) 777-7777</span>
-          </p>
-          <i class="action fa fa-trash text-danger"></i>
-        </div>
-      </div>
-    </div>
-  </main>
 
+  </main>
+  <div class="contacts" id="contact-list"></div>
   <script src="main.js"></script>
 </body>
 
